# hwa-new-main-final

./: -  .coveragerc  .dockerignore  .env.example  .env.test.backup  .env.test.health  .gitignore  .importlinter  .pre-commit-config.yaml  .semgrepignore  0.7.0  AUDIT_REPORT.json  AUDIT_REPORT.md  BLACK_FORMATTER_EXPLANATION.md  BLACK_FORMATTER_REPORT.md  BUG_RESOLUTION_VALIDATION_CHECKLIST.md  CHANGELOG.md  CHAT_CONVERSATION_SUPPORT.md  CHUCKNORRIS_OPTIMIZATION_REPORT.md  CI_CD_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENT_FINAL_REPORT.md  CODING_STANDARDS.md  CONTEXTO_PROXIMO_CHAT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fastapi  Dockerfile.test  EXCEPTION_HIERARCHY.md  FINAL_IMPLEMENTATION_REPORT.md  FLAKE8_F821_FIXES_REPORT.md  FLAKE8_LINTING_REPORT.md  GUIA_INTEGRACAO.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODO.md  MODEL_ARCHITECTURE.md  Makefile  NEO4J_INSTALLATION_GUIDE.md  PLANO_IMPLEMENTACAO_AJUSTES.md  PLANO_MELHORIA_ERRO_QUALIDADE.md  PROGRESSO_IMPLEMENTACAO.md  (+170 more)
.github/: dependabot.yml
.kilocode/: mcp.json
.roo/: mcp.json
.serena/: project.yml
.tasks/: CODE_REVIEW_COMPREHENSIVE.md  CONTEXTO_PROXIMO_CHAT.md  CONTRIBUTING.md  DATABASE_CONNECTION_THRESHOLD_GUIDE.md  FINAL_REVIEW_PLAN.md  PLANO_IMPLEMENTACAO_AJUSTES.md  TODO.md  VALIDA#U00c7#U00c2O.MD  VALIDATION.md  VERSIONING.md  action-plan-subtasks.md  analysis-findings.md  architecture-optimization-diagram.md  architecture-optimization-plan.md  dependency_injection.md  deployment_checklist.md  security.md
Resync.sonargraph/: system.sonargraph
aiobreaker/: __init__.py
config/: agents.json  (+8 more)
(+761 files in other folders)
